2024-04-24T16:16:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8819828002 # 212
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-24
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 197 227 / 198 228
* notice: next accum: outdated-unq outdated-all / unq all: 198 228 / 199 229
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-01-19] / [2024-04-24]

2024-01-27T08:16:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7677405958 # 61
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-27
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 196 226 / 198 228
* notice: next accum: outdated-unq outdated-all / unq all: 197 227 / 198 228
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-13] / []

2024-01-25T16:20:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7657401473 # 56
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-25
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 195 225 / 198 228
* notice: next accum: outdated-unq outdated-all / unq all: 196 226 / 198 228
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-11] / []

2024-01-20T01:07:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7591065084 # 39