@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-04-24T16:16:02Z",
+  "timestamp" : "2024-04-25T01:01:59Z",
   "count_outdated" : 228,
   "uniques_outdated" : 198,
-  "count" : 229,
+  "count" : 230,
   "uniques" : 199,
   "clones" : [
     {
       "timestamp": "2024-04-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
